startup-wikijs/wikijs-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: startup-wikijs-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: default-redirectscheme@kubernetescrd
  labels:
    app: wiki
spec:
  rules:
    - host: wiki.startup.celestium.life
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: startup-wikijs
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: startup-wikijs-https
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: startup-le-production
  labels:
    app: wiki
spec:
  rules:
    - host: wiki.startup.celestium.life
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: startup-wikijs
                port:
                  number: 80
  tls:
    - hosts:
        - wiki.startup.celestium.life
      secretName: wiki-startup-cert
